cli/tests/testdata/test/step.out
running 2 tests from [WILDCARD]/test/step.ts
test test 1 ...
	step 1 ... 
		step 1.1 ... 
			step 1.1.1 ... FAILED ([WILDCARD])
			step 1.1.2 ... ok ([WILDCARD])
			step 1.1.3 ... ok ([WILDCARD])
		FAILED ([WILDCARD])
		step 1.2 ... ok ([WILDCARD])
		step 1.3 ... ok ([WILDCARD])
	FAILED ([WILDCARD])
	step 2 ... 
		step 2.1 ... ok ([WILDCARD])
		step 2.2 ... ok ([WILDCARD])
		step 2.3 ... ok ([WILDCARD])
	ok ([WILDCARD])
FAILED ([WILDCARD])
test addition (sequential) ...
	1+1=2 ... ok ([WILDCARD])
	1+2=3 ... ok ([WILDCARD])
	-1+2=1 ... ok ([WILDCARD])
ok ([WILDCARD])

failures:

test 1
AggregateError
    at runTest (deno:runtime/js/40_testing.js:309:26)
    at async Object.runTests (deno:runtime/js/40_testing.js:378:22)
    at async [WILDCARD]/59ef229e-4d4d-4a30-9fc3-b35716e6ad72$deno$test.js:4:1

failures:

	test 1

test result: FAILED. 1 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Test failed
